Add Ultra Dynamic Sky Asset

--- a/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -198,7 +198,7 @@ WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
