enabled chaos vehicle plugin

--- a/CraneGame/Config/DefaultEngine.ini
+++ b/CraneGame/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=CraneGame
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+EditorStartupMap=/Game/A_Environment/Maps/Sandbox_01.Sandbox_01
+GameDefaultMap=/Game/A_Environment/Maps/Sandbox_01.Sandbox_01
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
