initial vehicle setup

--- a/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -392,6 +392,7 @@ MovementComponent="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+OpenAssetsAtExit=/Game/A_Character/BP_Crane.BP_Crane
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2435,4 +2436,7 @@ GraphEditorQuickJumps=()
 [PluginBrowser]
 InstalledPlugins=NDIMedia
 InstalledPlugins=WMFCodecs
+
+[AssetEditorSubsystemRecents]
+MRUItem0=/Game/A_Character/BP_Crane
 
