Crane Skeleton edit

--- a/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -188,7 +188,7 @@ BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
 bPauseAnimationOnCameraMove=False
 bUseInlineSocketEditor=False
 bFlattenSkeletonHierarchyWhenFiltering=False
-bHideParentsWhenFiltering=False
+bHideParentsWhenFiltering=True
 bShowBoneIndexes=False
 bExpandTreeOnSelection=True
 bAllowPreviewMeshCollectionsToSelectFromDifferentSkeletons=True
@@ -342,14 +342,14 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails
 K2Node_VariableGet=BP_Crane_C.TransformCommon.Transform
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 SkeletonEditingTool=SkeletonEditingProperties.Details.Transform
-MeshTopologySelectionMechanicProperties=
+MeshTopologySelectionMechanicProperties=SkeletonEditingProperties.Details.Transform
 ProjectionProperties=SkeletonEditingProperties.Details.Transform
 MirroringProperties=SkeletonEditingProperties.Details.Transform
 OrientingProperties=SkeletonEditingProperties.Details.Transform
 SkeletonEditingProperties=SkeletonEditingProperties.Details.Transform
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/A_Character
+ContentBrowserTab1.SelectedPaths=/Game/Imports
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -642,25 +642,29 @@ SkinnedAsset="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 LODInfoUILayout="\"Object\" "
 ProjectionProperties="\"Object\" "
-InteractiveToolPropertySet=
+InteractiveToolPropertySet="\"Object\" "
 MirroringProperties="\"Object\" "
-OrientingProperties="\"Object\" "
+OrientingProperties="\"Object\" \"Object.Orient.Options\" "
 SkeletonEditingProperties="\"Object\" "
+PhysicsAssetGenerationSettings="\"Object\" "
+PhysicsAsset="\"Object\" "
+SkeletalBodySetup="\"Object\" "
+BodySetup="\"Object\" "
+BodySetupCore="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-OpenAssetsAtExit=/Game/A_Character/Crane/BP_Crane.BP_Crane
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/A_Character/Crane/BP_CraneController.BP_CraneController
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2282,6 +2286,7 @@ EnhancedInputDeveloperSettings.Trigger Default Values=True
 EnhancedInputEditorProjectSettings.Default=True
 MegascansMaterialParentSettings.Parent Materials=True
 InterchangeFbxSettings.FBX=True
+InterchangeFbxSettings.FBX=True
 GameplayDebuggerConfig.Input=True
 GameplayDebuggerConfig.Display=True
 GameplayDebuggerConfig.AddOns=True
@@ -2671,7 +2676,6 @@ ChaosWheeledVehicleMovementComponent.Tags=True
 ChaosWheeledVehicleMovementComponent.ComponentReplication=True
 ChaosWheeledVehicleMovementComponent.Cooking=True
 ChaosWheeledVehicleMovementComponent.Events=True
-InterchangeFbxSettings.FBX =True
 BP_Crane_Char_C.TransformCommon=True
 BP_Crane_Char_C.Animation=True
 BP_Crane_Char_C.Mesh=True
@@ -2916,6 +2920,11 @@ ProjectionProperties.Project=True
 SkeletalMeshComponent.Materials=True
 BP_Crane_C.Materials=True
 SkeletalMeshComponent.SkeletalMesh=False
+PhysicsAssetGenerationSettings.Body Creation=True
+PhysicsAssetGenerationSettings.Constraint Creation=True
+SkeletalBodySetup.Physics=True
+SkeletalBodySetup.BodySetup=True
+SkeletalBodySetup.Collision=True
 
 [WorldBrowser]
 DisplayPaths=False
@@ -2999,13 +3008,16 @@ InstalledPlugins=NDIMedia
 InstalledPlugins=WMFCodecs
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/ControlRigModules/Modules/Meshes/SK_Car_Template
-MRUItem1=/Game/A_Character/Crane/BP_CraneController
-MRUItem2=/Game/A_Character/Crane/BP_Crane
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem4=/Game/ThirdPerson/Input/IMC_Default
-MRUItem5=/Game/A_Gameplay/Input/IMC_DriveCrane
-MRUItem6=/Game/A_Gameplay/Input/Actions/IA_Drive
+MRUItem0=/Game/Imports/Crane_Skeleton
+MRUItem1=/Game/Imports/Crane_PhysicsAsset
+MRUItem2=/Game/Imports/Crane
+MRUItem3=/ControlRigModules/Modules/Meshes/SK_Car_Template
+MRUItem4=/Game/A_Character/Crane/BP_CraneController
+MRUItem5=/Game/A_Character/Crane/BP_Crane
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem7=/Game/ThirdPerson/Input/IMC_Default
+MRUItem8=/Game/A_Gameplay/Input/IMC_DriveCrane
+MRUItem9=/Game/A_Gameplay/Input/Actions/IA_Drive
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultModes=True
@@ -3167,8 +3179,8 @@ Results=None
 Assets_LastSelectedPipeline=InterchangeGenericAssetsPipeline
 
 [InterchangeImportDialogOptions]
-ImportContentDialogSizeX=1503
-ImportContentDialogSizeY=995
+ImportContentDialogSizeX=2258
+ImportContentDialogSizeY=1513
 
 [/Script/AudioEditor.AudioEditorSettings]
 bUseAudioAttenuation=True
