updated physics asset crane

--- a/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -135,6 +135,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
+CurrentPosGridSize=5
 FlightCameraControlExperimentalNavigation=False
 MinimumOrthographicZoom=250.000000
 bAllowArcballRotate=False
@@ -655,8 +656,9 @@ BodySetupCore="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=
-RecentAssetEditors=
+OpenAssetsAtExit=/Game/Imports/Crane_PhysicsAsset.Crane_PhysicsAsset
+RecentAssetEditors=PhysicsAssetEditor
+RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -3008,8 +3010,8 @@ InstalledPlugins=NDIMedia
 InstalledPlugins=WMFCodecs
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Imports/Crane_Skeleton
-MRUItem1=/Game/Imports/Crane_PhysicsAsset
+MRUItem0=/Game/Imports/Crane_PhysicsAsset
+MRUItem1=/Game/Imports/Crane_Skeleton
 MRUItem2=/Game/Imports/Crane
 MRUItem3=/ControlRigModules/Modules/Meshes/SK_Car_Template
 MRUItem4=/Game/A_Character/Crane/BP_CraneController
