more crane setup?

--- a/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -350,7 +350,7 @@ OrientingProperties=SkeletonEditingProperties.Details.Transform
 SkeletonEditingProperties=SkeletonEditingProperties.Details.Transform
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Imports
+ContentBrowserTab1.SelectedPaths=/Game/A_Character/Crane
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -375,6 +375,7 @@ ContentBrowserTab1.ZoomScale=0
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 AssetDialog.ZoomScale=0
+ContentBrowserTab1.JumpMRU=/All/Game/A_Character/Crane
 ContentBrowserTab1.JumpMRU=/All/Game/A_Character
 ContentBrowserTab1.JumpMRU=/All/Game
 ContentBrowserTab1.JumpMRU=/All/Game/LevelPrototyping/Meshes
@@ -473,11 +474,11 @@ LastLevel=/Game/A_Environment/Maps/Sandbox_01
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.WheelSetup.WheelSetups\" \"Object.WheelSetup.WheelSetups.WheelSetups[0]\" \"Object.WheelSetup.WheelSetups.WheelSetups[1]\" \"Object.WheelSetup.WheelSetups.WheelSetups[2]\" \"Object.WheelSetup.WheelSetups.WheelSetups[3]\" \"Object.SteeringSetup.SteeringSetup\" \"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
 BillboardComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+ActorComponent="\"Object\" \"Object.WheelSetup.WheelSetups\" \"Object.WheelSetup.WheelSetups.WheelSetups[0]\" \"Object.WheelSetup.WheelSetups.WheelSetups[1]\" \"Object.WheelSetup.WheelSetups.WheelSetups[2]\" \"Object.WheelSetup.WheelSetups.WheelSetups[3]\" \"Object.SteeringSetup.SteeringSetup\" \"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
@@ -654,12 +655,13 @@ BodySetup="\"Object\" "
 BodySetupCore="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 OpenAssetsAtExit=/Game/Imports/Crane_PhysicsAsset.Crane_PhysicsAsset
+OpenAssetsAtExit=/Game/A_Character/Crane/BP_Crane.BP_Crane
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=PhysicsAssetEditor
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -684,8 +686,8 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=1280.000 Y=684.000
-WindowSize=X=1286.000 Y=726.000
-InitiallyMaximized=True
+WindowSize=X=1288.000 Y=728.000
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1985,6 +1987,16 @@ NewLevelDialog.TimeStamp=2024.12.13-22.48.42
 NewLevelDialog.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2024.12.13-22.48.40
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+ChaosVehicles.TimeStamp=2024.12.13-22.50.31
+ChaosVehicles.LastCompileMethod=Unknown
+ChaosVehiclesEditor.TimeStamp=2024.12.13-22.50.31
+ChaosVehiclesEditor.LastCompileMethod=Unknown
+PhysicsAssetEditor.TimeStamp=2024.12.13-22.48.42
+PhysicsAssetEditor.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2024.12.13-22.48.43
+SkeletonEditor.LastCompileMethod=Unknown
+PinnedCommandList.TimeStamp=2024.12.13-22.48.42
+PinnedCommandList.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -2952,6 +2964,8 @@ DataflowSettings=True
 /ControlRigModules/Modules/Meshes/SK_Car_Template.SK_Car_Template=0
 /Game/Imports/debris-drivetrain_Skeleton.debris-drivetrain_Skeleton=0
 /Game/Imports/debris-drivetrain.debris-drivetrain=0
+/Game/Imports/Crane_PhysicsAsset.Crane_PhysicsAsset=0
+/Game/A_Character/Crane/BP_Crane.BP_Crane=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2975,8 +2989,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -3010,12 +3024,12 @@ InstalledPlugins=NDIMedia
 InstalledPlugins=WMFCodecs
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Imports/Crane_PhysicsAsset
-MRUItem1=/Game/Imports/Crane_Skeleton
-MRUItem2=/Game/Imports/Crane
-MRUItem3=/ControlRigModules/Modules/Meshes/SK_Car_Template
-MRUItem4=/Game/A_Character/Crane/BP_CraneController
-MRUItem5=/Game/A_Character/Crane/BP_Crane
+MRUItem0=/Game/A_Character/Crane/BP_Crane
+MRUItem1=/Game/Imports/Crane_PhysicsAsset
+MRUItem2=/Game/Imports/Crane_Skeleton
+MRUItem3=/Game/Imports/Crane
+MRUItem4=/ControlRigModules/Modules/Meshes/SK_Car_Template
+MRUItem5=/Game/A_Character/Crane/BP_CraneController
 MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 MRUItem7=/Game/ThirdPerson/Input/IMC_Default
 MRUItem8=/Game/A_Gameplay/Input/IMC_DriveCrane
@@ -3196,6 +3210,8 @@ Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletalMeshEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletalMeshEditor",Commands=)
+Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
+Contexts=(Name="PhysicsAssetEditor",Commands=)
 
 [SkeletalMeshModelingTools]
 EditingModeActive=True
