--- a/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -655,10 +655,8 @@ BodySetup="\"Object\" "
 BodySetupCore="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-OpenAssetsAtExit=/Game/Imports/Crane_PhysicsAsset.Crane_PhysicsAsset
-OpenAssetsAtExit=/Game/A_Character/Crane/BP_Crane.BP_Crane
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=PhysicsAssetEditor
 RecentAssetEditors=PhysicsAssetEditor
