Crane Wheel setup

--- a/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -348,6 +348,8 @@ ProjectionProperties=SkeletonEditingProperties.Details.Transform
 MirroringProperties=SkeletonEditingProperties.Details.Transform
 OrientingProperties=SkeletonEditingProperties.Details.Transform
 SkeletonEditingProperties=SkeletonEditingProperties.Details.Transform
+Actor=BP_Crane_C.TransformCommon.Transform
+PrimitiveComponent=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/A_Character/Crane
@@ -408,7 +410,7 @@ ContentBrowserTab4.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab4.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab4.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab4.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab4.SelectedPaths=/Game/Imports
+ContentBrowserTab4.SelectedPaths=/Game/A_Character/Crane
 ContentBrowserTab4.PluginFilters=
 ContentBrowserTab4.Favorites.SelectedPaths=
 ContentBrowserTab4.SelectedCollections=
@@ -474,7 +476,7 @@ LastLevel=/Game/A_Environment/Maps/Sandbox_01
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.WheelSetup.WheelSetups\" \"Object.WheelSetup.WheelSetups.WheelSetups[0]\" \"Object.WheelSetup.WheelSetups.WheelSetups[1]\" \"Object.WheelSetup.WheelSetups.WheelSetups[2]\" \"Object.WheelSetup.WheelSetups.WheelSetups[3]\" \"Object.SteeringSetup.SteeringSetup\" \"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
+Object="\"Object\" "
 BillboardComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
@@ -653,15 +655,24 @@ PhysicsAsset="\"Object\" "
 SkeletalBodySetup="\"Object\" "
 BodySetup="\"Object\" "
 BodySetupCore="\"Object\" "
+CraneWheel_Front_C="\"Object\" "
+Actor="\"Object\" "
+CraneWheel_Rear_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+OpenAssetsAtExit=/Game/A_Character/Crane/BP_Crane.BP_Crane
+OpenAssetsAtExit=/Game/A_Character/Crane/CraneWheel_Front.CraneWheel_Front
+OpenAssetsAtExit=/Game/A_Character/Crane/CraneWheel_Rear.CraneWheel_Rear
+OpenAssetsAtExit=/Game/A_Character/Crane/Crane.Crane
+RecentAssetEditors=
+RecentAssetEditors=PhysicsAssetEditor
+RecentAssetEditors=PhysicsAssetEditor
+RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=PhysicsAssetEditor
-RecentAssetEditors=PhysicsAssetEditor
-RecentAssetEditors=
-RecentAssetEditors=
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -2937,6 +2948,23 @@ PhysicsAssetGenerationSettings.Constraint Creation=True
 SkeletalBodySetup.Physics=True
 SkeletalBodySetup.BodySetup=True
 SkeletalBodySetup.Collision=True
+CraneWheel_Front_C.Shape=True
+CraneWheel_Front_C.Wheel=True
+CraneWheel_Front_C.WheelsSetup=True
+CraneWheel_Front_C.Setup=True
+CraneWheel_Front_C.Suspension=True
+CraneWheel_Front_C.Brakes=True
+Actor.TransformCommon=True
+Actor.Replication=True
+Actor.HLOD=True
+Actor.Physics=True
+Actor.Networking=True
+CraneWheel_Rear_C.Shape=True
+CraneWheel_Rear_C.Wheel=True
+CraneWheel_Rear_C.WheelsSetup=True
+CraneWheel_Rear_C.Setup=True
+CraneWheel_Rear_C.Suspension=True
+CraneWheel_Rear_C.Brakes=True
 
 [WorldBrowser]
 DisplayPaths=False
@@ -3022,16 +3050,18 @@ InstalledPlugins=NDIMedia
 InstalledPlugins=WMFCodecs
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/A_Character/Crane/BP_Crane
-MRUItem1=/Game/Imports/Crane_PhysicsAsset
-MRUItem2=/Game/Imports/Crane_Skeleton
-MRUItem3=/Game/Imports/Crane
-MRUItem4=/ControlRigModules/Modules/Meshes/SK_Car_Template
-MRUItem5=/Game/A_Character/Crane/BP_CraneController
-MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem7=/Game/ThirdPerson/Input/IMC_Default
-MRUItem8=/Game/A_Gameplay/Input/IMC_DriveCrane
-MRUItem9=/Game/A_Gameplay/Input/Actions/IA_Drive
+MRUItem0=/Game/A_Character/Crane/Crane
+MRUItem1=/Game/A_Character/Crane/Crane_Skeleton
+MRUItem2=/Game/A_Character/Crane/Crane_PhysicsAsset
+MRUItem3=/Game/A_Character/Crane/CraneWheel_Rear
+MRUItem4=/Game/A_Character/Crane/CraneWheel_Front
+MRUItem5=/Game/A_Character/Crane/BP_Crane
+MRUItem6=/ControlRigModules/Modules/Meshes/SK_Car_Template
+MRUItem7=/Game/A_Character/Crane/BP_CraneController
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem9=/Game/ThirdPerson/Input/IMC_Default
+MRUItem10=/Game/A_Gameplay/Input/IMC_DriveCrane
+MRUItem11=/Game/A_Gameplay/Input/Actions/IA_Drive
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultModes=True
