created crane Animation Blueprint

--- a/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -638,7 +638,7 @@ StaticMeshComponent="\"Object\" "
 SpringArmComponent="\"Object\" "
 CameraComponent="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[0].Modifiers\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[2].Modifiers\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[4]\" "
-DataAsset="\"Object\" "
+DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 InputAction="\"Object\" "
 BP_Crane_C="\"Object\" "
 WheeledVehiclePawn="\"Object\" "
@@ -671,9 +671,9 @@ CraneWheel_Rear_C="\"Object\" "
 PhysicsAssetEditorOptions="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-OpenAssetsAtExit=/Game/A_Character/Crane/BP_Crane.BP_Crane
+OpenAssetsAtExit=/Game/A_Character/Crane/ABP_Crane.ABP_Crane
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
@@ -3094,20 +3094,21 @@ InstalledPlugins=NDIMedia
 InstalledPlugins=WMFCodecs
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/A_Gameplay/Input/Actions/IA_Brake
-MRUItem1=/Game/A_Gameplay/Input/IMC_DriveCrane
-MRUItem2=/Game/A_Character/Crane/CraneWheel_Front
-MRUItem3=/Game/A_Character/Crane/Crane_PhysicsAsset
-MRUItem4=/Game/A_Character/Crane/Crane_TorqueCurve
-MRUItem5=/Game/A_Character/Crane/Crane
-MRUItem6=/Game/A_Character/Crane/Crane_Skeleton
-MRUItem7=/Game/A_Character/Crane/CraneWheel_Rear
-MRUItem8=/Game/A_Character/Crane/BP_Crane
-MRUItem9=/ControlRigModules/Modules/Meshes/SK_Car_Template
-MRUItem10=/Game/A_Character/Crane/BP_CraneController
-MRUItem11=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem12=/Game/ThirdPerson/Input/IMC_Default
-MRUItem13=/Game/A_Gameplay/Input/Actions/IA_Drive
+MRUItem0=/Game/A_Character/Crane/ABP_Crane
+MRUItem1=/Game/A_Gameplay/Input/Actions/IA_Brake
+MRUItem2=/Game/A_Gameplay/Input/IMC_DriveCrane
+MRUItem3=/Game/A_Character/Crane/CraneWheel_Front
+MRUItem4=/Game/A_Character/Crane/Crane_PhysicsAsset
+MRUItem5=/Game/A_Character/Crane/Crane_TorqueCurve
+MRUItem6=/Game/A_Character/Crane/Crane
+MRUItem7=/Game/A_Character/Crane/Crane_Skeleton
+MRUItem8=/Game/A_Character/Crane/CraneWheel_Rear
+MRUItem9=/Game/A_Character/Crane/BP_Crane
+MRUItem10=/ControlRigModules/Modules/Meshes/SK_Car_Template
+MRUItem11=/Game/A_Character/Crane/BP_CraneController
+MRUItem12=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem13=/Game/ThirdPerson/Input/IMC_Default
+MRUItem14=/Game/A_Gameplay/Input/Actions/IA_Drive
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultModes=True
