--- a/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CraneGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -220,7 +220,7 @@ AnimationCurveGroupingDelimiters="._/|\\"
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/A_Gameplay/Input/Actions/IA_Drive.IA_Drive,InputMappingContext.Mappings.ActionMappings./Game/A_Gameplay/Input/Actions/IA_Brake.IA_Brake
 InputAction=
 BP_Crane_C=BP_Crane_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup
-SkeletalMeshComponent=BP_Crane_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup
+SkeletalMeshComponent=
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails
 CryptoKeysSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails
 GameplayTagsSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails
@@ -359,9 +359,26 @@ AnimBlueprint=AnimBlueprint.Imports.Default Namespaces
 AnimGraphNode_MeshRefPose=AnimBlueprint.Imports.Default Namespaces
 CapsuleComponent=
 PlayerStart=BP_Crane_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup
+InputModifierSmoothDelta=
+InputModifierDeadZone=
+InputModifierResponseCurveExponential=
+InputModifierFOVScaling=
+InputTriggerDown=
+InputTriggerPressed=
+InputTriggerReleased=
+InputTriggerHold=
+InputTriggerHoldAndRelease=
+InputTriggerTap=
+InputTriggerPulse=
+MovieSceneTakeSettings=
+TakeRecorderMicrophoneAudioSourceSettings=
+TakeRecorderMicrophoneAudioManager=
+MovieSceneAnimationTrackRecorderEditorSettings=
+TakeRecorderWorldSourceSettings=
+BP_ThirdPersonCharacter_C=BP_Crane_C.TransformCommon.Transform,SkeletalMeshComponent.Physics.ConstraintsGroup
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/A_Character/Crane
+ContentBrowserTab1.SelectedPaths=/Game/A_Character/Player
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -419,7 +436,7 @@ ContentBrowserTab4.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab4.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab4.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab4.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab4.SelectedPaths=/Game/A_Character/Crane
+ContentBrowserTab4.SelectedPaths=/Game/A_Gameplay/Input
 ContentBrowserTab4.PluginFilters=
 ContentBrowserTab4.Favorites.SelectedPaths=
 ContentBrowserTab4.SelectedCollections=
@@ -448,7 +465,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/A_Character/Crane
+ContentBrowserDrawer.SelectedPaths=None
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -634,9 +651,9 @@ SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 CharacterMovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
-PawnMovementComponent="\"Object\" \"Object.WheelSetup.WheelSetups\" \"Object.WheelSetup.WheelSetups.WheelSetups[0]\" \"Object.WheelSetup.WheelSetups.WheelSetups[1]\" \"Object.WheelSetup.WheelSetups.WheelSetups[2]\" \"Object.WheelSetup.WheelSetups.WheelSetups[3]\" \"Object.Custom.WheelTraceCollisionResponses\" \"Object.MechanicalSetup.EngineSetup\" \"Object.MechanicalSetup.EngineSetup.TorqueCurve\" \"Object.MechanicalSetup.DifferentialSetup\" \"Object.MechanicalSetup.TransmissionSetup\" \"Object.MechanicalSetup.TransmissionSetup.ForwardGearRatios\" \"Object.MechanicalSetup.TransmissionSetup.ReverseGearRatios\" \"Object.SteeringSetup.SteeringSetup\" \"Object.SteeringSetup.SteeringSetup.SteeringCurve\" \"Object.VehicleSetup.CenterOfMassOverride\" \"Object.VehicleInput.ThrottleInputRate\" \"Object.VehicleInput.ThrottleInputRate.UserCurve\" \"Object.VehicleInput.BrakeInputRate\" \"Object.VehicleInput.BrakeInputRate.UserCurve\" \"Object.VehicleInput.SteeringInputRate\" \"Object.VehicleInput.SteeringInputRate.UserCurve\" \"Object.VehicleInput.HandbrakeInputRate\" \"Object.VehicleInput.HandbrakeInputRate.UserCurve\" \"Object.VehicleInput.PitchInputRate\" \"Object.VehicleInput.PitchInputRate.UserCurve\" \"Object.VehicleInput.RollInputRate\" \"Object.VehicleInput.RollInputRate.UserCurve\" \"Object.VehicleInput.YawInputRate\" \"Object.VehicleInput.YawInputRate.UserCurve\" \"Object.ArcadeControl.TorqueControl\" \"Object.ArcadeControl.TargetRotationControl\" \"Object.ArcadeControl.StabilizeControl\" \"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
-NavMovementComponent="\"Object\" \"Object.WheelSetup.WheelSetups\" \"Object.WheelSetup.WheelSetups.WheelSetups[0]\" \"Object.WheelSetup.WheelSetups.WheelSetups[1]\" \"Object.WheelSetup.WheelSetups.WheelSetups[2]\" \"Object.WheelSetup.WheelSetups.WheelSetups[3]\" \"Object.Custom.WheelTraceCollisionResponses\" \"Object.MechanicalSetup.EngineSetup\" \"Object.MechanicalSetup.EngineSetup.TorqueCurve\" \"Object.MechanicalSetup.DifferentialSetup\" \"Object.MechanicalSetup.TransmissionSetup\" \"Object.MechanicalSetup.TransmissionSetup.ForwardGearRatios\" \"Object.MechanicalSetup.TransmissionSetup.ReverseGearRatios\" \"Object.SteeringSetup.SteeringSetup\" \"Object.SteeringSetup.SteeringSetup.SteeringCurve\" \"Object.VehicleSetup.CenterOfMassOverride\" \"Object.VehicleInput.ThrottleInputRate\" \"Object.VehicleInput.ThrottleInputRate.UserCurve\" \"Object.VehicleInput.BrakeInputRate\" \"Object.VehicleInput.BrakeInputRate.UserCurve\" \"Object.VehicleInput.SteeringInputRate\" \"Object.VehicleInput.SteeringInputRate.UserCurve\" \"Object.VehicleInput.HandbrakeInputRate\" \"Object.VehicleInput.HandbrakeInputRate.UserCurve\" \"Object.VehicleInput.PitchInputRate\" \"Object.VehicleInput.PitchInputRate.UserCurve\" \"Object.VehicleInput.RollInputRate\" \"Object.VehicleInput.RollInputRate.UserCurve\" \"Object.VehicleInput.YawInputRate\" \"Object.VehicleInput.YawInputRate.UserCurve\" \"Object.ArcadeControl.TorqueControl\" \"Object.ArcadeControl.TargetRotationControl\" \"Object.ArcadeControl.StabilizeControl\" \"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
-MovementComponent="\"Object\" \"Object.WheelSetup.WheelSetups\" \"Object.WheelSetup.WheelSetups.WheelSetups[0]\" \"Object.WheelSetup.WheelSetups.WheelSetups[1]\" \"Object.WheelSetup.WheelSetups.WheelSetups[2]\" \"Object.WheelSetup.WheelSetups.WheelSetups[3]\" \"Object.Custom.WheelTraceCollisionResponses\" \"Object.MechanicalSetup.EngineSetup\" \"Object.MechanicalSetup.EngineSetup.TorqueCurve\" \"Object.MechanicalSetup.DifferentialSetup\" \"Object.MechanicalSetup.TransmissionSetup\" \"Object.MechanicalSetup.TransmissionSetup.ForwardGearRatios\" \"Object.MechanicalSetup.TransmissionSetup.ReverseGearRatios\" \"Object.SteeringSetup.SteeringSetup\" \"Object.SteeringSetup.SteeringSetup.SteeringCurve\" \"Object.VehicleSetup.CenterOfMassOverride\" \"Object.VehicleInput.ThrottleInputRate\" \"Object.VehicleInput.ThrottleInputRate.UserCurve\" \"Object.VehicleInput.BrakeInputRate\" \"Object.VehicleInput.BrakeInputRate.UserCurve\" \"Object.VehicleInput.SteeringInputRate\" \"Object.VehicleInput.SteeringInputRate.UserCurve\" \"Object.VehicleInput.HandbrakeInputRate\" \"Object.VehicleInput.HandbrakeInputRate.UserCurve\" \"Object.VehicleInput.PitchInputRate\" \"Object.VehicleInput.PitchInputRate.UserCurve\" \"Object.VehicleInput.RollInputRate\" \"Object.VehicleInput.RollInputRate.UserCurve\" \"Object.VehicleInput.YawInputRate\" \"Object.VehicleInput.YawInputRate.UserCurve\" \"Object.ArcadeControl.TorqueControl\" \"Object.ArcadeControl.TargetRotationControl\" \"Object.ArcadeControl.StabilizeControl\" \"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
+PawnMovementComponent="\"Object\" \"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
+NavMovementComponent="\"Object\" \"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object\" \"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
 ChaosWheeledVehicleMovementComponent="\"Object\" \"Object.WheelSetup.WheelSetups\" \"Object.WheelSetup.WheelSetups.WheelSetups[0]\" \"Object.WheelSetup.WheelSetups.WheelSetups[1]\" \"Object.WheelSetup.WheelSetups.WheelSetups[2]\" \"Object.WheelSetup.WheelSetups.WheelSetups[3]\" \"Object.Custom.WheelTraceCollisionResponses\" \"Object.MechanicalSetup.EngineSetup\" \"Object.MechanicalSetup.EngineSetup.TorqueCurve\" \"Object.MechanicalSetup.DifferentialSetup\" \"Object.MechanicalSetup.TransmissionSetup\" \"Object.MechanicalSetup.TransmissionSetup.ForwardGearRatios\" \"Object.MechanicalSetup.TransmissionSetup.ReverseGearRatios\" \"Object.SteeringSetup.SteeringSetup\" \"Object.SteeringSetup.SteeringSetup.SteeringCurve\" \"Object.VehicleSetup.CenterOfMassOverride\" \"Object.VehicleInput.ThrottleInputRate\" \"Object.VehicleInput.ThrottleInputRate.UserCurve\" \"Object.VehicleInput.BrakeInputRate\" \"Object.VehicleInput.BrakeInputRate.UserCurve\" \"Object.VehicleInput.SteeringInputRate\" \"Object.VehicleInput.SteeringInputRate.UserCurve\" \"Object.VehicleInput.HandbrakeInputRate\" \"Object.VehicleInput.HandbrakeInputRate.UserCurve\" \"Object.VehicleInput.PitchInputRate\" \"Object.VehicleInput.PitchInputRate.UserCurve\" \"Object.VehicleInput.RollInputRate\" \"Object.VehicleInput.RollInputRate.UserCurve\" \"Object.VehicleInput.YawInputRate\" \"Object.VehicleInput.YawInputRate.UserCurve\" \"Object.ArcadeControl.TorqueControl\" \"Object.ArcadeControl.TargetRotationControl\" \"Object.ArcadeControl.StabilizeControl\" \"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
 ChaosVehicleMovementComponent="\"Object\" \"Object.WheelSetup.WheelSetups\" \"Object.WheelSetup.WheelSetups.WheelSetups[0]\" \"Object.WheelSetup.WheelSetups.WheelSetups[1]\" \"Object.WheelSetup.WheelSetups.WheelSetups[2]\" \"Object.WheelSetup.WheelSetups.WheelSetups[3]\" \"Object.Custom.WheelTraceCollisionResponses\" \"Object.MechanicalSetup.EngineSetup\" \"Object.MechanicalSetup.EngineSetup.TorqueCurve\" \"Object.MechanicalSetup.DifferentialSetup\" \"Object.MechanicalSetup.TransmissionSetup\" \"Object.MechanicalSetup.TransmissionSetup.ForwardGearRatios\" \"Object.MechanicalSetup.TransmissionSetup.ReverseGearRatios\" \"Object.SteeringSetup.SteeringSetup\" \"Object.SteeringSetup.SteeringSetup.SteeringCurve\" \"Object.VehicleSetup.CenterOfMassOverride\" \"Object.VehicleInput.ThrottleInputRate\" \"Object.VehicleInput.ThrottleInputRate.UserCurve\" \"Object.VehicleInput.BrakeInputRate\" \"Object.VehicleInput.BrakeInputRate.UserCurve\" \"Object.VehicleInput.SteeringInputRate\" \"Object.VehicleInput.SteeringInputRate.UserCurve\" \"Object.VehicleInput.HandbrakeInputRate\" \"Object.VehicleInput.HandbrakeInputRate.UserCurve\" \"Object.VehicleInput.PitchInputRate\" \"Object.VehicleInput.PitchInputRate.UserCurve\" \"Object.VehicleInput.RollInputRate\" \"Object.VehicleInput.RollInputRate.UserCurve\" \"Object.VehicleInput.YawInputRate\" \"Object.VehicleInput.YawInputRate.UserCurve\" \"Object.ArcadeControl.TorqueControl\" \"Object.ArcadeControl.TargetRotationControl\" \"Object.ArcadeControl.StabilizeControl\" \"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
 StaticMeshComponent="\"Object\" "
@@ -690,30 +707,19 @@ AnimGraphNode_Root="\"Object\" "
 PhysicsConstraintTemplate="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
+BPP_Player_C="\"Object\" "
+FloatingPawnMovement="\"Object\" \"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
+BP_ThirdPersonCharacter_C="\"Object\" "
+Character="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-OpenAssetsAtExit=/Game/A_Character/Crane/ABP_Crane.ABP_Crane
-OpenAssetsAtExit=/Game/A_Character/Crane/BP_Crane.BP_Crane
-OpenAssetsAtExit=/Game/A_Character/Crane/Crane_Skeleton.Crane_Skeleton
-OpenAssetsAtExit=/Game/A_Character/Crane/Crane.Crane
-OpenAssetsAtExit=/Game/A_Character/Crane/Crane_PhysicsAsset.Crane_PhysicsAsset
-OpenAssetsAtExit=/Game/A_Character/Crane/CraneWheel_Rear.CraneWheel_Rear
-OpenAssetsAtExit=/Game/A_Character/Crane/CraneWheel_Front.CraneWheel_Front
+OpenAssetsAtExit=/Game/A_Character/Player/BPP_Player.BPP_Player
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=PhysicsAssetEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=CurveAssetEditor
-RecentAssetEditors=
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 
@@ -2176,8 +2182,9 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.5/Engine/Plugins/Animation/Control
 /Game/A_Gameplay=(R=1.000000,G=0.712753,B=0.000000,A=1.000000)
 /Game/A_Gameplay/Input=(R=1.000000,G=0.712753,B=0.000000,A=1.000000)
 /Game/A_Gameplay/Input/Actions=(R=1.000000,G=0.712753,B=0.000000,A=1.000000)
-/Game/A_Character/Crane=(R=1.000000,G=0.025487,B=0.270351,A=1.000000)
 /Game/Imports=(R=0.147569,G=0.147569,B=0.147569,A=1.000000)
+/Game/A_Character/Player=(R=1.000000,G=0.025487,B=0.270351,A=1.000000)
+/Game/A_Environment/Maps=(R=1.000000,G=0.343725,B=0.000000,A=1.000000)
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -3083,6 +3090,37 @@ PlayerStart.Physics=True
 PlayerStart.Networking=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
+InterchangeFbxSettings.FBX =True
+BPP_Player_C.Pawn=True
+BPP_Player_C.Tick=True
+BPP_Player_C.Camera=True
+BPP_Player_C.Replication=True
+BPP_Player_C.Rendering=True
+BPP_Player_C.Collision=True
+BPP_Player_C.Actor=True
+BPP_Player_C.Input=True
+BPP_Player_C.HLOD=True
+BPP_Player_C.Physics=True
+BPP_Player_C.Events=True
+FloatingPawnMovement.Variable=True
+FloatingPawnMovement.Sockets=True
+FloatingPawnMovement.FloatingPawnMovement=True
+FloatingPawnMovement.NavMovement=True
+FloatingPawnMovement.Velocity=True
+FloatingPawnMovement.PlanarMovement=True
+FloatingPawnMovement.ComponentTick=True
+FloatingPawnMovement.MovementComponent=True
+FloatingPawnMovement.Tags=True
+FloatingPawnMovement.ComponentReplication=True
+FloatingPawnMovement.Activation=True
+FloatingPawnMovement.Cooking=True
+FloatingPawnMovement.Events=True
+BP_ThirdPersonGameMode_C.Tick=True
+BP_ThirdPersonGameMode_C.Classes=True
+BP_ThirdPersonGameMode_C.Game=True
+BP_ThirdPersonGameMode_C.GameMode=True
+BP_ThirdPersonGameMode_C.Physics=True
+BP_ThirdPersonGameMode_C.Events=True
 
 [WorldBrowser]
 DisplayPaths=False
@@ -3118,6 +3156,10 @@ DataflowSettings=True
 /Game/A_Gameplay/Input/Actions/IA_Brake.IA_Brake=1
 /Game/A_Character/Crane/ABP_Crane.ABP_Crane=0
 /Game/A_Character/Crane/Crane_Skeleton.Crane_Skeleton=0
+/Game/A_Character/Player/BPP_Player.BPP_Player=1
+/Game/A_Character/Crane/BP_CraneController.BP_CraneController=1
+/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
+/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3141,8 +3183,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -3176,21 +3218,11 @@ InstalledPlugins=NDIMedia
 InstalledPlugins=WMFCodecs
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/A_Character/Crane/CraneWheel_Front
-MRUItem1=/Game/A_Character/Crane/CraneWheel_Rear
-MRUItem2=/Game/A_Character/Crane/Crane_PhysicsAsset
-MRUItem3=/Game/A_Character/Crane/Crane
-MRUItem4=/Game/A_Character/Crane/Crane_Skeleton
-MRUItem5=/Game/A_Character/Crane/BP_Crane
-MRUItem6=/Game/A_Character/Crane/ABP_Crane
-MRUItem7=/Game/A_Gameplay/Input/Actions/IA_Brake
-MRUItem8=/Game/A_Gameplay/Input/IMC_DriveCrane
-MRUItem9=/Game/A_Character/Crane/Crane_TorqueCurve
-MRUItem10=/ControlRigModules/Modules/Meshes/SK_Car_Template
-MRUItem11=/Game/A_Character/Crane/BP_CraneController
-MRUItem12=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem13=/Game/ThirdPerson/Input/IMC_Default
-MRUItem14=/Game/A_Gameplay/Input/Actions/IA_Drive
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem1=/Game/A_Character/Player/BPP_Player
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem3=/ControlRigModules/Modules/Meshes/SK_Car_Template
+MRUItem4=/Game/ThirdPerson/Input/IMC_Default
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultModes=True
